CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o enrich_motifs(mode, pseudocount): Choose whether to count motif hits
      once per sequence, and whether to add a pseudocount for P-value
      calculation.

    o New function, meme_alph(): Create MEME custom alphabet definition files.

    o merge_similar(return.clusters): Return the clusters without merging.

MINOR CHANGES

    o enrich_motifs(): RC argument now defaults to TRUE, increased max
      significance values, no.overlaps now defaults to TRUE. Additional
      columns showing the motif consensus sequence and percent of sequences
      with hits are now included.

    o scan_sequences(RC): Only print a warning if RC=TRUE for non-DNA/RNA
      motifs.

    o Reduced the size of the message when a pseudocount is added to motifs.

CHANGES IN VERSION 1.12.3
-------------------------

BUG FIXES

    o scan_sequences(): Previously this function did not account for the fact
      that duplicate sequence names are allowed within XStringSet objects. To
      better keep track of which sequence hits are associated with, an
      additional sequence.i column has been added which keeps track of the
      sequence number. This change also fixes a knock-on issue with
      enrich_motifs(), where sequences with duplicate names did not contribute
      to the count of sequences containing hits.

CHANGES IN VERSION 1.12.2
-------------------------

BUG FIXES

    o shuffle_sequences(..., method="markov"): Previously the returning
      sequences were longer by 1.

CHANGES IN VERSION 1.12.1
-------------------------

BUG FIXES

    o DNA ambiguity letters can be used with create_motif() when
      alphabet="DNA" is specified. Previously ambiguity letters only worked
      when alphabet was not specified.

CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o New function, sequence_complexity(): Using either the Wootton-Federhen,